GNOME Bugzilla – Bug 668937
Memory leak with invalid Path attributes
Last modified: 2012-01-29 14:09:12 UTC
Created attachment 206341 [details] [review] Fixed memory leak when parsing a Path attribute fails When a XPS document contains a Path element with invalid attributes, a GXPSPath struct is leaked. For example: <Path Stroke="asdf" /> <Path Fill="asdf" /> ...etc This patch calls gxps_path_free in more code paths.
Review of attachment 206341 [details] [review]: Pushed to git master. Thanks!