Fixed memory leak when parsing a Path attribute fails

Fixed leak where a GXPSPath struct is leaked when a XPS document
contains a Path element with invalid attributes.

For example:
<Path Stroke="asdf" />
<Path Fill="asdf" />
...etc

This patch calls gxps_path_free in more code paths.

https://bugzilla.gnome.org/show_bug.cgi?id=668937